--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ develop-eggs
 .installed.cfg
 lib
 lib64
+target
 
 # Installer logs
 pip-log.txt
@@ -29,8 +30,8 @@ nosetests.xml
 # Translations
 *.mo
 
-# Mr Developer
+# project files
 .mr.developer.cfg
 .project
 .pydevproject
-/target
+.idea
